@@ -3,3 +3,6 @@ The Augmented Reality Sandbox History
 
 SARndbox-1.0:
 - Initial release, needs Vrui-2.4 to build.
+
+SARndbox-1.1:
+- Added constant water evaporation rate to sandbox.
